# psqlm

./: Cargo.toml  README.md  flake.nix
src/: claude.rs  config.rs  main.rs  psql.rs  repl.rs  schema.rs
